Fix dots_java compilation for new javac